Closed
Bug 744887
Opened 14 years ago
Closed 14 years ago
Build error: nsFilePicker.cpp(227) : error C2065: 'nsPIDOMWindow' : undeclared identifier
Categories
(Core :: Widget: Win32, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: mayhemer, Unassigned)
References
Details
Attachments
(1 file)
|
749 bytes,
patch
|
jimm
:
review+
mayhemer
:
checkin+
|
Details | Diff | Splinter Review |
Windows x64, building debug browser, options:
ac_add_options --disable-crashreporter
ac_add_options --disable-webm
ac_add_options --disable-accessibility
ac_add_options --disable-angle
http://hg.mozilla.org/mozilla-central/rev/490b6732369e
Attachment #614484 -
Flags: review?(jmathies)
Updated•14 years ago
|
Attachment #614484 -
Flags: review?(jmathies) → review+
| Reporter | ||
Comment 1•14 years ago
|
||
Comment on attachment 614484 [details] [diff] [review]
v1
https://hg.mozilla.org/mozilla-central/rev/55e7efcc1946
Attachment #614484 -
Flags: checkin+
| Reporter | ||
Updated•14 years ago
|
Status: NEW → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•