Bug 744887 - Build error: nsFilePicker.cpp(227) : error C2065: 'nsPIDOMWindow' : undeclared identifier, r=jmathies